sandbox/output
Supplier.java:2: error: <identifier> expected
    public <T> get();
                  ^
1 error
